SPLIT to flaticon.js

--- a/src/html/permissions.html
+++ b/src/html/permissions.html
@@ -29,7 +29,7 @@
             <i class="fa-solid fa-check-double me-1"></i> Grant Host Permissions</button>
     </div>
     <p>
-        This web extension injects the <a href="../js/content-script.js" target="_blank">content-script.js</a> script into every site.
+        This web extension injects content scripts into various sites.
         What it does? Nobody knows! Only one way to find out...
     </p>
     <a class="btn btn-lg btn-outline-info w-100 mb-3" href="../html/options.html">
