DYNAMIC content scripts

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -56,6 +56,16 @@
                 </span>
             </label>
         </div>
+        <hr>
+        <div class="form-check form-switch">
+            <input class="form-check-input" id="content-flaticon" type="checkbox" role="switch">
+            <label class="form-check-label" for="content-flaticon" aria-describedby="content-flaticon">
+                Flaticon.com
+                <span data-bs-toggle="tooltip" data-bs-title="Flaticon.com">
+                    <i class="fa-solid fa-circle-info ms-1"></i>
+                </span>
+            </label>
+        </div>
     </form>
     <div class="d-none my-3 grant-perms">
         <button class="btn btn-lg btn-success w-100 mb-2 grant-permissions" type="button"
