--- a/src/html/options.html
+++ b/src/html/options.html
@@ -66,6 +66,15 @@
                 </span>
             </label>
         </div>
+        <div class="form-check form-switch">
+            <input class="form-check-input" id="content-fontawesome" type="checkbox" role="switch">
+            <label class="form-check-label" for="content-fontawesome" aria-describedby="content-fontawesome">
+                Fontawesome.com
+                <span data-bs-toggle="tooltip" data-bs-title="Fontawesome.com">
+                    <i class="fa-solid fa-circle-info ms-1"></i>
+                </span>
+            </label>
+        </div>
     </form>
     <div class="d-none my-3 grant-perms">
         <button class="btn btn-lg btn-success w-100 mb-2 grant-permissions" type="button"
